# Scalper-Project

./: .gitignore  README.md  alex_scalpers_stats.ipynb  ebay_data.csv  final-notebook.ipynb  final-notebook2.ipynb  project.toml  ps5averages.ipynb  pyproject.toml  requirements.md  scalpers_stats.ipynb  scraper.py  test_new.csv  timehistory-ps4-prl.ipynb  timehistory.ipynb  xbox_new.csv  xbox_sold.csv
api/: BestBuy_api.py  Ebay_api.py  amazon_price_history_api.py
api_tools/: Amazon_price_history_api.py  Ebay_api.py
assets/data/: PS4_3rd_party_sales.csv  PS4_MSRP_sales.csv  Sony-stock-2010-2020.csv  Sony-stock-august-2020-present.csv  Sony-stock-data-2013-2014.csv  sales-ps4.csv
data/: 3080_new.csv  3080_sold.csv  fake_ps5_ebay.csv  fake_ps5_msrp.csv  new_ebay_tues.csv  ps4_msrp.csv  ps4_scalped.csv  ps4_scalped_ascollected.csv  sold_scrape_tuesday.csv
fake-data/: ebay_data.csv  ebay_data_tuesday.csv
sandbox-notebooks/: alex-notebook.ipynb  alex_scalpers_stats.ipynb  lee-notebook.ipynb  ps4_trends.ipynb
