[tool.poetry]
name = "scalper-project"
version = "0.1.0"
description = ""
authors = ["TAYLOR JOHNSON <TAYLOR.MCMINN@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.3"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
sklearn = "^0.0"
seaborn = "^0.10.1"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
