[tool.poetry]
name = "scalper-project"
version = "0.1.0"
description = ""
authors = ["LeeThomas13 <lmtthomasritz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.3"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
sklearn = "^0.0"
seaborn = "0.11.0"
statsmodels = "^0.12.1"
scipy = "^1.5.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"